# ctxlog

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/source/: advanced.rst  conf.py  configuration.rst  index.rst  installation.rst  license.rst  quickstart.rst
docs/source/api/: config.rst  core.rst  handlers.rst  index.rst  level.rst
scripts/: changelog.py  release.py
src/ctxlog/: __init__.py  handlers.py  level.py  log.py  logger.py
tests/: __init__.py
tests/ctxlog/: __init__.py  test_config.py  test_handlers.py  test_handlers_color.py  test_handlers_file_errors.py  test_handlers_formatting.py  test_handlers_rotation.py  test_integration.py  test_level.py  test_log.py  test_logger.py
